# disk-cleaner

./: CHANGELOG.md  Cargo.toml  README.en.md  README.md
src/: lib.rs  projects.rs
src/tui/: app.rs  event.rs  mod.rs  theme.css  ui.rs
